Add some config